--- a/styles/style.css
+++ b/styles/style.css
@@ -69,9 +69,98 @@ nav li {
 }
 
 img {
-    width: 1440px;
-    height: 700px;
-    flex-shrink: 0;
+    width: 100%;
+    margin-top: 20px;
+}
+
+/* teams style */
+main {
+    max-width: 1440px;
+    margin: 70px auto;
+}
+
+.teams-container {
+    display: flex;
+    align-items: center;
+}
+
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
     border-radius: 8px;
-    background: lightgray 0px -94.291px / 100% 137.109% no-repeat;
+    padding-left: 100px;
+}
+
+.teams-contant {
+    padding-right: 70px;
+    padding-left: 70px;
+}
+
+.teams-title {
+    font-size: 45px;
+
+}
+
+.quick {
+    color: #727272;
+    font-size: 45px;
+    font-weight: 500;
+
+}
+
+.of-our {
+    color: #131313;
+    font-size: 45px;
+    font-weight: 700;
+}
+
+.Features {
+    color: #FF900E;
+    font-family: Work Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.teams-descrisption {
+    color: #727272;
+    font-size: 16px;
+    font-weight: 400;
+
+}
+
+/* responsive media style */
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+    .teams-container{
+        flex-direction: column;
+    }
+    .teams-img-container {
+        grid-template-columns: 1fr;
+        margin-right: 60px;
+}
+
+/* tablet or medium devices */
+@media screen and (min-width: 576px) and (max-width:960px) {
+
+    nav , .teams-container{
+        flex-direction: column;
+    }
+
+    header {
+        padding: 50px;
+
+    }
+    .teams-contant {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
 }
