--- a/styles/style.css
+++ b/styles/style.css
@@ -131,6 +131,42 @@ main {
 
 }
 
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5px;
+
+}
+
+.facts-card-container .card-stats {
+    color: var(--Dark-02, #424242);
+    font-size: 45px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+.card-title {
+    color: var(--Dark-03, #727272);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+}
+
+.card img {
+    width: 45.221px;
+    height: 45.221px;
+    flex-shrink: 0;
+}
+
 /* responsive media style */
 @media screen and (max-width: 576px) {
     header {
@@ -140,27 +176,35 @@ main {
     nav {
         flex-direction: column;
     }
-    .teams-container{
+
+    .teams-container , .facts-card-container {
         flex-direction: column;
     }
+    .facts-card-container{
+        padding: 20px;
+        gap: 20px;
+    }
+
     .teams-img-container {
         grid-template-columns: 1fr;
         margin-right: 60px;
-}
-
-/* tablet or medium devices */
-@media screen and (min-width: 576px) and (max-width:960px) {
-
-    nav , .teams-container{
-        flex-direction: column;
     }
 
-    header {
-        padding: 50px;
+    /* tablet or medium devices */
+    @media screen and (min-width: 576px) and (max-width:960px) {
 
+        nav,
+        .teams-container {
+            flex-direction: column;
+        }
+
+        header {
+            padding: 50px;
+
+        }
+
+        .teams-contant {
+            padding-right: 20px;
+            padding-left: 20px;
+        }
     }
-    .teams-contant {
-        padding-right: 20px;
-        padding-left: 20px;
-    }
-}
