--- a/styles/style.css
+++ b/styles/style.css
@@ -131,6 +131,65 @@ main {
 
 }
 
+/* features style  */
+.features1 {
+    display: flex;
+    margin-top: 100px;
+    gap: 100px;
+    margin-left: 100px;
+}
+
+.features1 .section-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.features1 .card {
+    margin-top: 15px;
+    padding: 30px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.features1-img {
+    width: 708px;
+    height: 982px;
+    flex-shrink: 0;
+}
+
+.features1-img img {
+    height: 100%;
+    margin-left: 90px;
+}
+
+.ten-years-badge {
+    border-radius: 8px;
+    background: #FF900E;
+    width: 280px;
+    height: 120px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+}
+
+.ten-years-badge h2 {
+    color: #FFF;
+    font-size: 65px;
+    font-weight: 700;
+    margin: 0;
+
+}
+
+.ten-years-badge p {
+    color: #FFF;
+    font-size: 25px;
+    font-weight: 500;
+
+}
+
+
 .facts-card-container .card {
     border-radius: 8px;
     border: 1px solid #FF900E;
@@ -167,6 +226,23 @@ main {
     flex-shrink: 0;
 }
 
+.Sponsors {
+    text-align: center;
+}
+
+.sponsors-img-container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 10px;
+}
+
+.sponsors-img-container img {
+    width: 140px;
+    height: 35px;
+    flex-shrink: 0;
+}
+
 /* responsive media style */
 @media screen and (max-width: 576px) {
     header {
@@ -177,10 +253,27 @@ main {
         flex-direction: column;
     }
 
-    .teams-container , .facts-card-container {
+    .features1 , .teams-container,
+    .facts-card-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
-    .facts-card-container{
+    .features1-img img{
+        width: 90%;
+        margin-left: 0;
+    }
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
+        max-height: 150px;
+        gap: 50px;
+    }
+
+    .sponsors-img-container {
+        align-items: center;
+    }
+
+    .facts-card-container {
         padding: 20px;
         gap: 20px;
     }
